--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.21.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.29.3",
     "esri-loader": "^3.6.0",
     "helper-toolkit-ts": "^1.1.13",
     "react": "^18.1.0",
