feat: Add Diverging Bar

--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "^4.23.1",
+    "@types/d3": "5.16",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.21.2",
     "classnames": "^2.2.6",
+    "d3": "5.16",
     "date-fns": "^2.29.3",
     "esri-loader": "^3.6.0",
     "helper-toolkit-ts": "^1.1.13",
