--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.8",
-    "@types/arcgis-js-api": "^4.23.1",
+    "@types/arcgis-js-api": "4.24",
     "@types/d3": "5.16",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
