--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/vannizhang/land-cover-explorer/issues"
   },
-  "homepage": "https://github.com/vannizhang/land-cover-explorer",
+  "homepage": "https://livingatlas.arcgis.com/landcoverexplorer/",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
