--- a/package.json
+++ b/package.json
@@ -75,14 +75,15 @@
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^1.6.0",
-    "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^9.3.0",
     "prettier": "^2.7.1",
     "source-map-loader": "^3.0.0",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^3.0.24",
     "terser-webpack-plugin": "^5.1.3",
-    "typescript": "^4.3.4",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.4.2",
@@ -95,12 +96,10 @@
     "@esri/arcgis-rest-request": "^4.1.1",
     "@reduxjs/toolkit": "1.8",
     "@types/arcgis-js-api": "4.24",
-    "@types/d3": "5.16",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "axios": "^0.21.2",
+    "axios": "^1.6.7",
     "classnames": "^2.2.6",
-    "d3": "5.16",
     "date-fns": "^2.29.3",
     "esri-loader": "^3.6.0",
     "helper-toolkit-ts": "^1.1.13",
