--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/arcgis-js-api": "4.24",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "@vannizhang/react-d3-charts": "^1.0.24",
     "axios": "^1.6.7",
     "classnames": "^2.2.6",
     "date-fns": "^2.29.3",
