chore: use @arcgis/core instead of esri-loader

--- a/package.json
+++ b/package.json
@@ -91,18 +91,17 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@arcgis/core": "^4.28.10",
     "@esri/arcgis-rest-feature-service": "^4.0.3",
     "@esri/arcgis-rest-portal": "^4.1.0",
     "@esri/arcgis-rest-request": "^4.1.1",
     "@reduxjs/toolkit": "1.8",
-    "@types/arcgis-js-api": "4.24",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@vannizhang/react-d3-charts": "^1.0.27",
     "axios": "^1.6.7",
     "classnames": "^2.2.6",
     "date-fns": "^2.29.3",
-    "esri-loader": "^3.6.0",
     "helper-toolkit-ts": "^1.1.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
