--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,15 @@
         "target": "es5",
         "resolveJsonModule": true,
         "esModuleInterop": true ,
-        "suppressImplicitAnyIndexErrors": true,
         "downlevelIteration": true,
         "typeRoots": [  
             "./src/types", 
             "./node_modules/@types"
         ],
         "lib": [ "es2015", "dom" ],
+        "paths": {
+            "@landcover-explorer/*": ["./src/*"],
+        }
     },
     "exclude": [
         "**/node_modules", 
